feat: adding shirt status
